crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_simple_if_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: simple_if.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn simple_if {
    parameters: [2]
    entry: 0

    0:
      %3 = 5 (u32)
      %4 = %2 U32Greater %3
      if %4 then jump 1 else jump 3

    1:
      %5 = 10 (u32)
      %6 = %2 U32Add %5
      %1 = %6 (u32)
      jump 2

    2:
      %0 = %1 (u32)
      jump 4

    3:
      %1 = %2 (u32)
      jump 2

    4:
      return %0

  }

}
