crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_variables_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: variables.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 10 (u32)
      %1 = 5 (u32)
      %2 = %0 U32Add %1
      return %2

  }

}
